# routes/product.route.js
@@ -4,6 +4,7 @@ const auth = require("../middlewares/auth");
 const verified = require("../middlewares/verified");
 
 router.get("/:id", productController.getById);
+router.get("/", productController.getAll);
 router.post("/", [auth, verified], productController.create);
 
 module.exports = router;
